# skill_tracker_rtk_backend

./: .gitignore  Dockerfile  README.md  alembic.ini  db.py  docker-compose-dev.yaml  docker-compose.yaml  main.py  prometheus.yml  promtail-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml  test_lint.yaml
app/models/: __init__.py  models  models.py
config/: .env.test_db  .env.test_db.example
configs/: app.docker.toml  app.toml  app_test.toml
docs/: description.md
frontend/: Dockerfile  DockerfileDev  nginx.conf
frontend/src/: App.jsx
frontend/src/pages/: CourseEditorPage.jsx  CourseViewerPage.jsx  EmployeeDashboardPage.jsx  ManagerDashboardPage.jsx  TaskEditorPage.jsx  TaskViewerPage.jsx
grafana/dashboards/: dashboard.yaml  dating_bot_dashboard.json
migrations/: env.py
migrations/utils/: triggers.py
migrations/versions/: 33bfde55fcd9_initial_database.py  45b3b6fdd5c4_create_notifications_table.py  62e6bcd9a179_create_basic_tables.py  755b83611af4_create_course_employee_contents_table.py  7b2c1bdf6c83_create_triggers.py  946e054cb83c_create_basic_tables.py  aac922822ba4_create_notifications_table.py  ace0ad12e823_create_course_employee_contents_table.py  c6d41c8fda3c_create_employee_content_statuses_table.py  d505cb9bcde4_create_basic_tables.py
models/: enums.py  models.py
skill_tracker/: config.py  di.py  main.py  metrics.py
skill_tracker/controllers/: auth.py  comment.py  metrics.py  notification.py  task.py  user.py
skill_tracker/controllers/middlewares/: metrics_middleware.py
skill_tracker/db_access/migrations/: env.py
skill_tracker/db_access/models/: __init__.py  comment.py  task.py  user.py
skill_tracker/db_access/repositories/: comment_repository.py  task_repository.py  user_repository.py
skill_tracker/repositories/: notification_repository.py
skill_tracker/services/: comment_service.py  notification_service.py  task_service.py  user_service.py
skill_tracker/tasks/: ai_tasks.py
sql/triggers/: check user roles.sql  check_content_type_task_theory.sql  check_user_role_before_create_course.sql  check_user_role_before_register_course.sql  check_user_roles_not_empty.sql  create_employee_content_statuses_after_course_registration.sql
sql/triggers/create_basic_tables/: check_content_type_task_theory.sql  check_user_role_before_create_course.sql  check_user_role_before_register_course.sql  protect_produced_content_update.sql  protect_produced_course_update.sql  protect_task_update_after_production.sql  protect_theory_update_after_production.sql  validate_course_deadline.sql
sql/triggers/create_course_employee_contents_table/: create_employee_content_statuses.sql  prevent_enroll_unproduced_courses.sql
sql/triggers/create_notifications_table/: notify_course_deletion.sql  notify_employee_course_completed.sql  notify_manager_course_comment.sql  notify_manager_course_created.sql  notify_manager_course_enrollment.sql
tests/: conftest.py  test_cascade_deletes.py  test_comment.py  test_task.py
tests/scripts/: rm_test_environment.sh  setup_test_environment.sh
tests/triggers/: test_check_content_type_task_theory.py  test_check_user_role_before_create_course.py  test_check_user_role_before_register_course.py  test_check_user_roles.py  test_create_employee_content_statuses_after_course_registration.py
(+23 files in other folders)
