[project]
name = "skill-tracker-rtk-backend"
version = "0.1.0"
description = "Project for rostelekom"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "dishka>=1.6.0",
    "fastapi>=0.115.12",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "loguru>=0.7.3",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "ruff>=0.11.13",
    "sqlalchemy>=2.0.41",
    "toml>=0.10.2",
    "uvicorn>=0.34.3",
]
